<resources>
    <string name="app_name">MyRuns4</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="change">Change</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="major">Major</string>
    <string name="dartmouth_class">Dartmouth Class</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="application_settings">Application Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="privacy">Privacy</string>
    <string name="records_anonymous">Posting your records anonymously</string>
    <string name="start">Start</string>
    <string name="history">History</string>
    <string name="input_type">Input Type</string>
    <string name="activity_type">Activity Type</string>
    <string name="metric_option">Metric (Kilometers)</string>
    <string name="imperial_option">Imperial (Miles)</string>
    <string name="app_settings">Application Settings</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="post_record_anon">Posting your records anonymously</string>
    <string name="unit_preference">Unit Preference</string>
    <string name="select_units">Select the units</string>
    <string name="webpage">Webpage</string>
    <string name="webpage_url_string">http://cs.dartmouth.edu/~campbell/cs65/cs65.html</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="item">Item</string>
    <string name="ok">OK</string>
    <string name="empty">Empty</string>
    <string name="manual">Manual</string>
    <string name="delete">Delete</string>
</resources>
